# sheepy.moe

./: .env  .gitignore  Cargo.toml  Trunk.toml  copying  index.html  package-lock.json  package.json  readme.md  tailwind.config.cts
deploy/: consts.sh  deploy.sh
src/: app.rs  constants.rs  lib.rs  links.rs  router.rs  types.rs
src/components/: counter.rs  guestbook.rs  heroicons.rs  main_page_content.rs  mod.rs  navbar.rs  theme_toggle.rs
src/routes/: about.rs  blog.rs  homepage.rs  mod.rs  settings.rs
src/services/: mod.rs  state.rs
src/webserver/: blog_post_routes.rs  constants.rs  counter_routes.rs  log.rs  mod.rs  server_side_render.rs  settings.rs  static_routes.rs  theme_change_routes.rs  util.rs  yew_routes.rs
static/: input.postcss  output.css
static/88x31/: listing.ron
static/blog/: counter-animation.webm  counter-timer-fail.webm
