[package]
name = "sheepy-moe"
version = "0.1.0"
edition = "2021"
description = "\"sheepy.moe\" website"
readme = "readme.md"
license = "MIT"

[features]
hydration = ["yew/hydration"]
ssr = ["yew/ssr"]

[dependencies]
ron = "0.8.1"
serde = { version = "1.0.193", features = ["derive"] }
yew = { version = "0.21", features = ["ssr"] }
yew-router = "0.18.0"
wasm-cookies = "0.2.1"
web-sys = { version = "0.3.66", features = [
    "Storage",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlDocument",
    "HtmlDivElement",
    "HtmlSelectElement",
    "Node",
    "Window",
    "CssStyleDeclaration",
    "HtmlCollection",
    "NodeList",
    "EventTarget",
    "Event",
] }
wasm-bindgen = "0.2.89"
bounce = { version = "0.9.0", features = ["query", "ssr"] }
gloo-net = "0.5.0"
wasm-bindgen-futures = "0.4"
wasmtimer = "0.2.0"
tokio = { version = "1.35.1", features = ["rt"] }
anyhow = "1.0.86"
lazy_static = "1.4.0"
strum_macros = "0.26.2"
async-trait = "0.1.80"
reqwest = "0.12.5"
thiserror = "1.0.61"
dotenvy = "0.15.7"
urldecode = "0.1.1"
implicit-clone = "0.3.9"

# SSR
[[bin]]
name = "server"
required-features = ["ssr"]
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
const_format = "0.2.32"
env_logger = "0.10.1"
futures = { version = "0.3.30", features = ["std"] }
jemallocator = "0.5.4"
log = "0.4.20"
tokio = { version = "1.35.1", features = [
    "fs",
    "rt",
    "macros",
    "rt-multi-thread",
] }
warp = "0.3.6"
anyhow = "1.0.86"
pulldown-cmark = "=0.9.3"
highlight-pulldown = "0.2.2"

# CSR
[[bin]]
name = "hydrate"
required-features = ["hydration"]
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-logger = "0.2"
log = "0.4"
anyhow = "1.0.86"

[target.'cfg(target_arch = "wasm32")'.profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true
